tests/fail/NotEqual.java
package fail;

public class NotEqual {
    public static void main(String[] args) {
        System.out.println("a" != 32);
    }
}
